--- a/ChuckNorrisJokeBank/New Group/Base.lproj/Main.storyboard
+++ b/ChuckNorrisJokeBank/New Group/Base.lproj/Main.storyboard
@@ -109,6 +109,9 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="v5j-We-Maw" id="EML-oK-H0p"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
