--- a/ChuckNorrisJokeBank/New Group/Base.lproj/LaunchScreen.storyboard
+++ b/ChuckNorrisJokeBank/New Group/Base.lproj/LaunchScreen.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="mission_statement_logo" translatesAutoresizingMaskIntoConstraints="NO" id="tP8-14-8Nc">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="mission_statement_logo" translatesAutoresizingMaskIntoConstraints="NO" id="l67-lN-txt">
                                 <rect key="frame" x="32" y="100" width="350" height="350"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
